--- a/soluciones_practica_2.ipynb
+++ b/soluciones_practica_2.ipynb
@@ -28,12 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "f9dba5e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd \n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
@@ -47,6 +48,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "34e58b02",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### **1. Clasificación mediante  ́arboles de clasificación**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd4a805c",
    "metadata": {},
    "source": [
@@ -56,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "343b57a9",
    "metadata": {},
    "outputs": [],
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "bc7d1c1a",
    "metadata": {},
    "outputs": [],
@@ -107,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "485a28a4",
    "metadata": {},
    "outputs": [
@@ -115,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 92.35816127721975 %\n"
+      "Accuracy: 92.37055344812156 %\n"
      ]
     }
    ],
@@ -137,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "29705ab3",
    "metadata": {},
    "outputs": [
@@ -147,7 +157,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "b18715e9",
    "metadata": {},
    "outputs": [
@@ -307,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "e3450d7f",
    "metadata": {},
    "outputs": [
@@ -315,7 +325,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variables usadas con importancia: [(0, 0.3387193675902033), (1, 0.02734065294627229), (2, 0.017110056184974496), (3, 0.060196787910735905), (4, 0.047588420293639556), (5, 0.14774537629887685), (6, 0.03182038149798011), (7, 0.033703739434048204), (8, 0.02477366924852275), (9, 0.144395346998855), (10, 0.009571813426162762), (11, 0.0023373991008695996), (12, 0.012507758498829688), (13, 0.0016874797520611059), (14, 0.00029190964461878833), (15, 0.009824746700157672), (16, 0.001370541747133486), (17, 0.01125754414967012), (18, 0.0002653376729426192), (19, 0.0005795223900614763), (22, 0.00011716541185293037), (23, 0.002609083803495816), (24, 0.0018839788104798813), (25, 0.0008602858986689834), (26, 0.0034171015516396533), (27, 0.00011945702525846545), (28, 1.0886440090901796e-05), (29, 0.000779219015968397), (30, 0.0012164764635362703), (31, 1.8129399786179915e-05), (32, 0.0009461197934352617), (33, 0.002977966855033216), (34, 0.0002886730699214571), (35, 0.00694562633474603), (36, 0.008764931763823005), (37, 0.0038909989935176715), (38, 0.0001043141643040966), (39, 9.29343837179204e-05), (40, 0.0007656927297130585), (41, 0.00014964322450203245), (42, 0.00654634277593775), (43, 0.0026945661113239876), (44, 0.005673019784461972), (45, 0.012977437757725472), (46, 0.005081713567694201), (47, 0.0002698693144106678), (48, 0.001066143562381183), (49, 5.131106273029018e-05), (50, 0.00015373163499381707), (51, 0.0020378932926366023), (52, 0.003567711519382235), (53, 0.0008337229962148583)]\n"
+      "Variables usadas con importancia: [(0, 0.3388348139715392), (1, 0.028128228830494227), (2, 0.01730986421399671), (3, 0.06030282813122783), (4, 0.04691144085841901), (5, 0.14839823625394416), (6, 0.031282488311127364), (7, 0.033597830500244244), (8, 0.024419771987702663), (9, 0.14475755736863216), (10, 0.009002493642824017), (11, 0.00303063055395945), (12, 0.013365413460372863), (13, 0.0003924558921933753), (14, 0.00033347464544915387), (15, 0.00982474670015767), (16, 0.0013719987481363033), (17, 0.011252591807065403), (18, 0.00026533767294261915), (19, 0.0005772205308382756), (22, 0.00011716541185293036), (23, 0.0025920958831334253), (24, 0.0018960413093079178), (25, 0.000902286987993942), (26, 0.003312144619340922), (27, 0.00010163405813025485), (28, 1.0886440090901793e-05), (29, 0.000758109828337623), (30, 0.0012249898754869112), (31, 8.885855297719361e-06), (32, 0.0009745604505227973), (33, 0.002999976399983297), (34, 0.00028867306992145706), (35, 0.0069447211376388), (36, 0.008629297818570515), (37, 0.003950734097398492), (38, 0.00010364362270429465), (39, 0.00011490946643540901), (40, 0.0007925043024407576), (41, 7.684309013627396e-05), (42, 0.0065382083377000634), (43, 0.0026632160071196967), (44, 0.0058733272503229605), (45, 0.012884652155325273), (46, 0.005094916941467949), (47, 0.0002598754659091818), (48, 0.0010396261441299117), (49, 5.131106273029017e-05), (50, 0.00015373163499381705), (51, 0.0019403179784030543), (52, 0.0035029743255888725), (53, 0.0008383148903176658)]\n"
      ]
     }
    ],
@@ -364,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e199f75b",
    "metadata": {},
    "outputs": [
@@ -422,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cae91509",
    "metadata": {},
    "outputs": [],
@@ -445,11 +455,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b67e919c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.5, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1b4c1d2",
+   "metadata": {},
+   "source": [
+    "En el caso del árbol de regresión, no es necesario aplicar técnicas de escalado ni normalización, ya que no son sensibles a la escala de los atributos al realizar sus particiones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5720d60a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MedInc        0\n",
+      "HouseAge      0\n",
+      "AveRooms      0\n",
+      "AveBedrms     0\n",
+      "Population    0\n",
+      "AveOccup      0\n",
+      "Latitude      0\n",
+      "Longitude     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(X, columns=data.feature_names)\n",
+    "print(df.isnull().sum())      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4a256a46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape X: (20640, 8)\n",
+      "Shape y: (20640,)\n",
+      "             MedInc      HouseAge      AveRooms     AveBedrms    Population  \\\n",
+      "count  20640.000000  20640.000000  20640.000000  20640.000000  20640.000000   \n",
+      "mean       3.870671     28.639486      5.429000      1.096675   1425.476744   \n",
+      "std        1.899822     12.585558      2.474173      0.473911   1132.462122   \n",
+      "min        0.499900      1.000000      0.846154      0.333333      3.000000   \n",
+      "25%        2.563400     18.000000      4.440716      1.006079    787.000000   \n",
+      "50%        3.534800     29.000000      5.229129      1.048780   1166.000000   \n",
+      "75%        4.743250     37.000000      6.052381      1.099526   1725.000000   \n",
+      "max       15.000100     52.000000    141.909091     34.066667  35682.000000   \n",
+      "\n",
+      "           AveOccup      Latitude     Longitude  \n",
+      "count  20640.000000  20640.000000  20640.000000  \n",
+      "mean       3.070655     35.631861   -119.569704  \n",
+      "std       10.386050      2.135952      2.003532  \n",
+      "min        0.692308     32.540000   -124.350000  \n",
+      "25%        2.429741     33.930000   -121.800000  \n",
+      "50%        2.818116     34.260000   -118.490000  \n",
+      "75%        3.282261     37.710000   -118.010000  \n",
+      "max     1243.333333     41.950000   -114.310000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Shape X: {X.shape}\")\n",
+    "print(f\"Shape y: {y.shape}\")\n",
+    "print(df.describe())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f79c756",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:#2196F3\">**PREGUNTAR A LAS NIÑAS QUE HAN HECHO DE PREPROCESADO**</span>\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -463,7 +559,18 @@
    "cell_type": "markdown",
    "id": "ece2f767",
    "metadata": {},
-   "source": []
+   "source": [
+    "Sí.\n",
+    "\n",
+    "El modelo DecisionTreeRegressor tienen soporte integrado para valores faltantes.\n",
+    "Durante el entrenamiento, el árbol evalúa las divisiones usando los datos disponibles y distribuye los valores faltantes según las reglas aprendidas.\n",
+    "\n",
+    "Al predecir, las muestras con valores faltantes se asignan automáticamente al nodo más probable según el comportamiento observado durante el entrenamiento.\n",
+    "\n",
+    "Referencia oficial: [https://scikit-learn.org/stable/modules/tree.html#missing-values-support](https://scikit-learn.org/stable/modules/tree.html#missing-values-support)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -477,7 +584,15 @@
    "cell_type": "markdown",
    "id": "9b60361c",
    "metadata": {},
-   "source": []
+   "source": [
+    "No.\n",
+    "Los árboles de regresión no son sensibles a la escala ni a las magnitudes de los atributos, ya que las divisiones se basan únicamente en comparaciones (x_j < t) y no en distancias ni relaciones de proporción entre variables.\n",
+    "\n",
+    "Por eso no es necesario escalar ni normalizar los datos antes de entrenar el modelo.\n",
+    "Esta es una de las ventajas que destaca la documentación oficial: los árboles de decisión requieren muy poca preparación de datos en comparación con otros modelos como KNN, que sí dependen de la escala.\n",
+    "\n",
+    "Referencia oficial: [https://scikit-learn.org/stable/modules/tree.html#](https://scikit-learn.org/stable/modules/tree.html#)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -491,7 +606,22 @@
    "cell_type": "markdown",
    "id": "0f69f63c",
    "metadata": {},
-   "source": []
+   "source": [
+    "Sí, en cierta medida.\n",
+    "Los árboles de regresión minimizan el error cuadrático medio (MSE) al crear las divisiones, por lo que los valores de salida muy altos o atípicos (outliers) pueden influir más en el ajuste del modelo.\n",
+    "Esto significa que si las etiquetas (y) están muy desbalanceadas o contienen valores extremos, el árbol puede sobreajustarse a esos casos.\n",
+    "\n",
+    "Para evitarlo, la documentación recomienda controlar la complejidad del árbol con parámetros como:\n",
+    "\n",
+    "* max_depth → limita la profundidad máxima.\n",
+    "* min_samples_split → exige un mínimo de muestras para dividir un nodo.\n",
+    "* min_samples_leaf → asegura que cada hoja tenga suficientes muestras.\n",
+    "\n",
+    "También se puede aplicar una transformación de las etiquetas (por ejemplo, np.log1p(y)) para reducir el impacto de los valores muy grandes.\n",
+    "\n",
+    "Referencia oficial: [https://scikit-learn.org/stable/modules/tree.html#tips-on-practical-use](https://scikit-learn.org/stable/modules/tree.html#tips-on-practical-use)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -512,11 +642,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "44595126",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Nodo:\n",
+    "    \"\"\"\n",
+    "    Nodo del árbol de regresión.\n",
+    "    Si es hoja -> value ≠ None y f_index = threshold = None\n",
+    "    Si no es hoja -> define un split con f_index y threshold\n",
+    "    \"\"\"\n",
+    "    def __init__(self, f_index=None, threshold=None, value=None):\n",
+    "        self.f_index = f_index # Indice del atributo\n",
+    "        self.threshold = threshold # Umbral\n",
+    "        self.value = value # Valor medio (si es hoja)\n",
+    "        self.left = None # Hijo izquierdo\n",
+    "        self.right = None # Hijo derecho"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -532,7 +675,132 @@
    "id": "54d477de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class RegressionTree:\n",
+    "    def __init__(self, min_samples_split=2, max_depth=5):\n",
+    "        self.min_samples_split = min_samples_split\n",
+    "        self.max_depth = max_depth\n",
+    "        self.raiz = None  # Nodo raíz (instancia de Nodo)\n",
+    "\n",
+    "    # ----------------------------\n",
+    "    # 1. Cálculo del error regional\n",
+    "    # ----------------------------\n",
+    "    def region_error(self, y):\n",
+    "        \"\"\"Devuelve la varianza de y o 0 si está vacío.\"\"\"\n",
+    "        if len(y) > 0:\n",
+    "            return np.var(y)\n",
+    "        else:\n",
+    "            return 0\n",
+    "\n",
+    "    # ----------------------------------\n",
+    "    # 2. Búsqueda del mejor atributo y θ\n",
+    "    # ----------------------------------\n",
+    "        \n",
+    "    def _best_split(self, X, y):\n",
+    "        _, n_features = X.shape\n",
+    "        best_feature, best_threshold = None, None\n",
+    "        best_error = float(\"inf\")\n",
+    "\n",
+    "        for f in range(n_features):\n",
+    "            values = np.sort(np.unique(X[:, f]))\n",
+    "            if len(values) < 2:\n",
+    "                continue\n",
+    "            # Se decide utilizar el promedio entre valores consecutivos como umbral, en lugar de un valor exacto.\n",
+    "            # Esto permite evaluar los posibles cortes de forma más estable y evita usar valores exactos del conjunto.\n",
+    "            thresholds = (values[:-1] + values[1:]) / 2 \n",
+    "            for t in thresholds:\n",
+    "                left_idx = X[:, f] <= t\n",
+    "                right_idx = ~left_idx\n",
+    "                y_left, y_right = y[left_idx], y[right_idx]\n",
+    "                if len(y_left) == 0 or len(y_right) == 0:\n",
+    "                    continue\n",
+    "                n = len(y)\n",
+    "                error = (len(y_left) / n) * self._region_error(y_left) + \\\n",
+    "                        (len(y_right) / n) * self._region_error(y_right)\n",
+    "                if error < best_error:\n",
+    "                    best_error = error\n",
+    "                    best_feature = f\n",
+    "                    best_threshold = t\n",
+    "\n",
+    "        return best_feature, best_threshold\n",
+    "\n",
+    "    # ----------------------------------------\n",
+    "    # 3. Construcción recursiva del árbol\n",
+    "    # ----------------------------------------\n",
+    "    def _construir_nivel(self, X, y, profundidad):\n",
+    "        # Caso base 1: profundidad agotada\n",
+    "        if profundidad == 0:\n",
+    "            return Nodo(value=np.mean(y))\n",
+    "\n",
+    "        # Caso base 2: pocas muestras\n",
+    "        if len(y) <= self.min_samples_split:\n",
+    "            return Nodo(value=np.mean(y))\n",
+    "\n",
+    "        # Buscar mejor división\n",
+    "        f_opt, t_opt = self._find_best_split(X, y)\n",
+    "        if f_opt is None:\n",
+    "            return Nodo(value=np.mean(y))\n",
+    "\n",
+    "        # Crear nodo interno\n",
+    "        nodo = Nodo(f_index=f_opt, threshold=t_opt)\n",
+    "\n",
+    "        # Dividir datos\n",
+    "        left_idx = X[:, f_opt] <= t_opt\n",
+    "        right_idx = ~left_idx\n",
+    "\n",
+    "        X_left, y_left = X[left_idx], y[left_idx]\n",
+    "        X_right, y_right = X[right_idx], y[right_idx]\n",
+    "\n",
+    "        # Hijos\n",
+    "        nodo.left = self.construir_nivel(X_left, y_left, profundidad - 1)\n",
+    "        nodo.right = self.construir_nivel(X_right, y_right, profundidad - 1)\n",
+    "\n",
+    "        return nodo\n",
+    "\n",
+    "    # ----------------------------\n",
+    "    # 4. Ajustar el modelo\n",
+    "    # ----------------------------\n",
+    "    def fit(self, X, y):\n",
+    "        \"\"\"Entrena el árbol y define el nodo raíz.\"\"\"\n",
+    "        self.raiz = self.construir_nivel(np.array(X), np.array(y), self.max_depth)\n",
+    "\n",
+    "    # ----------------------------\n",
+    "    # 5. Predicción de una muestra\n",
+    "    # ----------------------------\n",
+    "    def _predict_sample(self, x, nodo):\n",
+    "        if nodo.value is not None:\n",
+    "            return nodo.value\n",
+    "\n",
+    "        if x[nodo.f_index] <= nodo.threshold:\n",
+    "            return self._predict_sample(x, nodo.left)\n",
+    "        else:\n",
+    "            return self._predict_sample(x, nodo.right)\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        X = np.array(X)\n",
+    "        return np.array([self._predict_sample(x, self.raiz) for x in X])\n",
+    "\n",
+    "    # ----------------------------\n",
+    "    # 6. Camino de decisión\n",
+    "    # ----------------------------\n",
+    "    def decision_path(self, x):\n",
+    "        \"\"\"Devuelve un string con las decisiones seguidas hasta la predicción.\"\"\"\n",
+    "        pasos = []\n",
+    "        nodo = self.raiz\n",
+    "        i = 1\n",
+    "\n",
+    "        while nodo.value is None:\n",
+    "            if x[nodo.f_index] <= nodo.threshold:\n",
+    "                pasos.append(f\"{i}. Atributo {nodo.f_index} menor o igual que {nodo.threshold}\")\n",
+    "                nodo = nodo.left\n",
+    "            else:\n",
+    "                pasos.append(f\"{i}. Atributo {nodo.f_index} mayor que {nodo.threshold}\")\n",
+    "                nodo = nodo.right\n",
+    "            i += 1\n",
+    "\n",
+    "        pasos.append(f\"Predicción final = {nodo.value:.3f}\")\n",
+    "        return \"\\n\".join(pasos)"
+   ]
   },
   {
    "cell_type": "markdown",
