--- a/soluciones_practica_2.ipynb
+++ b/soluciones_practica_2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "f9dba5e5",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "343b57a9",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "bc7d1c1a",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "485a28a4",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 92.39464933598617 %\n"
+      "Accuracy: 92.37124190206055 %\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "29705ab3",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "True"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "b18715e9",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "e3450d7f",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variables usadas con importancia: [(0, 0.33954007404723413), (1, 0.028222233110046995), (2, 0.017246522515484444), (3, 0.05976921368135136), (4, 0.04769414917055542), (5, 0.14798534041034392), (6, 0.030650576605526666), (7, 0.033769064680745274), (8, 0.02408665588777865), (9, 0.1453714442236646), (10, 0.008162194304685181), (11, 0.003186117672135844), (12, 0.012370549400070754), (13, 0.0017813741059291158), (14, 0.00029190964461878817), (15, 0.009838005409283302), (16, 0.0013705417471334854), (17, 0.011267327200377333), (18, 0.00026533767294261904), (19, 0.000601079802090929), (22, 0.00011716541185293032), (23, 0.002611618040888215), (24, 0.0018624176268857073), (25, 0.0009363926847878549), (26, 0.0033276052819265767), (27, 8.953800637050357e-05), (28, 1.088644009090179e-05), (29, 0.0008163256704665181), (30, 0.0011885242841803863), (31, 8.885855297719358e-06), (32, 0.000966575656880518), (33, 0.002884952398852542), (34, 0.00028867306992145695), (35, 0.006904721059912875), (36, 0.008701924173614999), (37, 0.003853360894405687), (38, 9.395579779969372e-05), (39, 0.00019084927334239474), (40, 0.0007568175831690257), (41, 6.451229932606882e-05), (42, 0.0065039720407294105), (43, 0.0028367418441466847), (44, 0.0057497648930565585), (45, 0.012876353777803632), (46, 0.005184956196383355), (47, 0.0002354782933678215), (48, 0.0010396261441299112), (49, 5.131106273029015e-05), (50, 0.000153731634993817), (51, 0.0019199563893886847), (52, 0.003486281906441945), (53, 0.0008164130148563889)]\n"
+      "Variables usadas con importancia: [(0, 0.339060556725056), (1, 0.028367617412519166), (2, 0.01722459228192804), (3, 0.06046193308605986), (4, 0.047012006521964744), (5, 0.14732689343271965), (6, 0.03126687301438378), (7, 0.03363475810880696), (8, 0.023921731718504837), (9, 0.145381136655504), (10, 0.0075862728882926285), (11, 0.0038771885661229772), (12, 0.013211903052229164), (13, 0.0013567207946456033), (14, 0.0003112452620936735), (15, 0.009749899148641984), (16, 0.001371998748136303), (17, 0.011256278276105973), (18, 0.00027362436614614133), (19, 0.0006242299291356896), (22, 0.00011716541185293033), (23, 0.0025326202252996793), (24, 0.0018453820884775135), (25, 0.0009165720994215083), (26, 0.0033931357644933088), (27, 0.00010569048137673425), (28, 1.0886440090901791e-05), (29, 0.0007622993072567381), (30, 0.0012257277453666573), (31, 8.88585529771936e-06), (32, 0.0009640779258550268), (33, 0.0030349468341821536), (34, 0.000288673069921457), (35, 0.006863992571253998), (36, 0.0087839892208561), (37, 0.003958574688087483), (38, 0.00010431416430409656), (39, 0.00019084927334239477), (40, 0.0007566550151592936), (41, 0.0001348846061761613), (42, 0.006569478984406966), (43, 0.0027833240200561497), (44, 0.005662699231340521), (45, 0.012916739222270502), (46, 0.005106898239132998), (47, 0.00025255390360538255), (48, 0.0010396261441299114), (49, 5.131106273029016e-05), (50, 0.00015373163499381702), (51, 0.0018826571023949762), (52, 0.003455730402879259), (53, 0.0008484672749904245)]\n"
      ]
     }
    ],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "e199f75b",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "id": "cae91509",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "b67e919c",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "id": "5720d60a",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "id": "23573e0b",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "id": "44595126",
    "metadata": {},
    "outputs": [],
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "id": "54d477de",
    "metadata": {},
    "outputs": [],
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "id": "3874ad09",
    "metadata": {},
    "outputs": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "id": "a5fca78d",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "id": "bce5be07",
    "metadata": {},
    "outputs": [
@@ -1203,98 +1203,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0db8d6f0",
+   "execution_count": 22,
+   "id": "c6877e6e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             Modelo        R²       MSE\n",
-      "2  GradientBoosting  0.974282  0.006430\n",
-      "1      RandomForest  0.966710  0.008322\n",
-      "0           Bagging  0.961949  0.009513\n"
+      "Bagging R²: 0.9619488\n",
+      "Bagging MSE: 0.0095128\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.datasets import fetch_california_housing\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.ensemble import BaggingRegressor, RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.ensemble import BaggingRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "pipelines = {\n",
-    "    \"Bagging\": Pipeline([\n",
-    "        (\"model\", BaggingRegressor(\n",
-    "            estimator=DecisionTreeRegressor(random_state=42),\n",
-    "            n_estimators=50,\n",
-    "            random_state=42\n",
-    "        ))\n",
-    "    ]),\n",
-    "    \n",
-    "    \"RandomForest\": Pipeline([\n",
-    "        (\"model\", RandomForestRegressor(\n",
-    "            n_estimators=100,\n",
-    "            max_depth=None,\n",
-    "            random_state=42\n",
-    "        ))\n",
-    "    ]),\n",
-    "    \n",
-    "    \"GradientBoosting\": Pipeline([\n",
-    "        (\"model\", GradientBoostingRegressor(\n",
-    "            n_estimators=100,\n",
-    "            learning_rate=0.1,\n",
-    "            max_depth=3,\n",
-    "            random_state=42\n",
-    "        ))\n",
-    "    ])\n",
-    "}\n",
+    "pipe_bagging = Pipeline([\n",
+    "    (\"model\", BaggingRegressor(\n",
+    "        estimator=DecisionTreeRegressor(random_state=42),\n",
+    "        n_estimators=50,\n",
+    "        random_state=42\n",
+    "    ))\n",
+    "])\n",
     "\n",
-    "# --- 3. Entrenar y evaluar cada pipeline ---\n",
-    "results = []\n",
-    "for name, pipe in pipelines.items():\n",
-    "    pipe.fit(X_train, y_train)\n",
-    "    y_pred = pipe.predict(X_test)\n",
-    "    \n",
-    "    r2 = r2_score(y_test, y_pred)\n",
-    "    mse = mean_squared_error(y_test, y_pred)\n",
-    "    \n",
-    "    results.append({\"Modelo\": name, \"R²\": r2, \"MSE\": mse})\n",
+    "pipe_bagging.fit(X_train, y_train)\n",
+    "y_pred_bagging = pipe_bagging.predict(X_test)\n",
     "\n",
-    "# --- 4. Mostrar resultados ---\n",
-    "df_results = pd.DataFrame(results).sort_values(by=\"R²\", ascending=False)\n",
-    "print(df_results)"
+    "print(\"Bagging R²:\", r2_score(y_test, y_pred_bagging))\n",
+    "print(\"Bagging MSE:\", mean_squared_error(y_test, y_pred_bagging))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "568b573a",
+   "execution_count": 19,
+   "id": "1d487e34",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'model__max_depth': None, 'model__n_estimators': 100} 0.9704470614993786\n"
+      "Random Forest R²: 0.7929866553813616\n",
+      "Random Forest MSE: 0.27438987885711436\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "param_grid = {\n",
-    "    \"model__n_estimators\": [50, 100, 200],\n",
-    "    \"model__max_depth\": [3, 5, None]\n",
-    "}\n",
+    "pipe_rf = Pipeline([\n",
+    "    (\"model\", RandomForestRegressor(\n",
+    "        n_estimators=100,\n",
+    "        max_depth=None,\n",
+    "        random_state=42,\n",
+    "        n_jobs=1\n",
+    "    ))\n",
+    "])\n",
     "\n",
-    "grid = GridSearchCV(pipelines[\"RandomForest\"], param_grid, cv=3, scoring=\"r2\")\n",
-    "grid.fit(X_train, y_train)\n",
-    "print(grid.best_params_, grid.best_score_)\n"
+    "pipe_rf.fit(X_train, y_train)\n",
+    "y_pred_rf = pipe_rf.predict(X_test)\n",
+    "\n",
+    "print(\"Random Forest R²:\", r2_score(y_test, y_pred_rf))\n",
+    "print(\"Random Forest MSE:\", mean_squared_error(y_test, y_pred_rf))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4473e906",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient Boosting R²: 0.7854902411388861\n",
+      "Gradient Boosting MSE: 0.28432614745682666\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "\n",
+    "pipe_gb = Pipeline([\n",
+    "    (\"model\", GradientBoostingRegressor(\n",
+    "        n_estimators=100,\n",
+    "        learning_rate=0.1,\n",
+    "        max_depth=3,\n",
+    "        random_state=42\n",
+    "    ))\n",
+    "])\n",
+    "\n",
+    "pipe_gb.fit(X_train, y_train)\n",
+    "y_pred_gb = pipe_gb.predict(X_test)\n",
+    "\n",
+    "print(\"Gradient Boosting R²:\", r2_score(y_test, y_pred_gb))\n",
+    "print(\"Gradient Boosting MSE:\", mean_squared_error(y_test, y_pred_gb))\n"
    ]
   },
   {
@@ -1304,33 +1312,6 @@
    "source": [
     "\n",
     "**1. ¿Cuáles son los hiperparámetros más relevantes de los métodos anteriores?**\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8dad2c60",
-   "metadata": {},
-   "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "\n",
-    "param_grid = {\n",
-    "    \"n_estimators\": [50, 100, 200],\n",
-    "    \"max_depth\": [None, 10, 20, 30],\n",
-    "    \"min_samples_split\": [2, 5, 10]\n",
-    "}\n",
-    "\n",
-    "grid = GridSearchCV(\n",
-    "    RandomForestRegressor(random_state=42),\n",
-    "    param_grid,\n",
-    "    scoring=\"r2\",\n",
-    "    cv=3,\n",
-    "    n_jobs=-1\n",
-    ")\n",
-    "grid.fit(X_train, y_train)\n",
-    "\n",
-    "print(grid.best_params_)\n",
-    "print(grid.best_score_)\n"
    ]
   },
   {
@@ -1438,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a6355735",
    "metadata": {},
    "outputs": [
